--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,16 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.21
+minecraft_version=1.21.1
 enabled_platforms=fabric,neoforge
 
 archives_base_name=yeatthesheep
-mod_version=1.3
+mod_version=1.4
 maven_group=org.theplaceholder
 
-fabric_loader_version=0.15.11
-neoforge_version=21.0.53-beta
+fabric_loader_version=0.16.13
+neoforge_version=21.1.145
+
+curseforge_id=955665
+modrinth_id=NB0fL4TV
+
+changelog="Updated to 1.21.1"
